# bpass

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bpass/: __init__.py  __main__.py  clear.py  pwd.py
