[tool.poetry]
name = "bpass"
version = "0.2.0"
description = "simple cli password-generator"
authors = ["luculliano <vederecento@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyclip = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
